--- a/Weitianshi/app.wxss
+++ b/Weitianshi/app.wxss
@@ -1196,4 +1196,14 @@ textarea {
   background: #fff;
   margin: 0 30rpx 0 30rpx;
 }
-
+.t-createColor{
+  background: #F3E2D6;
+}
+.t-hoverColor .projectListBlock{
+   /* background: #f2f3f4 !important; */
+   background: inherit!important
+}
+.t-hoverColor .memberDes{
+   /* background: #f2f3f4 !important; */
+    background: inherit!important
+}
