--- a/Weitianshi/pages/myProject/editProject/editProject.wxml
+++ b/Weitianshi/pages/myProject/editProject/editProject.wxml
@@ -134,6 +134,6 @@
     <image src="/img/img-saoyisao@2x.png" class="aPic"></image>
     <view class="modalTitle">电脑打开,点击扫一扫</view>
     <view class="modalTips">www.weitianshi.cn/qr</view>
-    <view class="btn" bindtap="upLoadPc">扫一扫</view>
+    <view class="btn" hover-class='t-other-button-hover' bindtap="upLoadPc">扫一扫</view>
   </view>
 </view>
