--- a/Weitianshi/pages/organization/org_search/org_search.wxml
+++ b/Weitianshi/pages/organization/org_search/org_search.wxml
@@ -17,10 +17,14 @@
   <swiper-item data-current='0'>
     <scroll-view style="height:100%;" scroll-y="true">
       <view style="height:32rpx;width:100%;"></view>
-      <view class="outStyleBox" id="investment" wx:if="{{investment_list.length != 0}}">
-        <view class="blockTitle">投资机构</view>
+      <view class="outStyleBox1" id="investment" wx:if="{{investment_list.length != 0}}">
+        <view class="outPadding">
+          <view class="blockTitle">投资机构</view>
+        </view>
         <template is="investment" data="{{investment_list,currentTab,index}}"></template>
-        <view class="more" wx:if="{{searchData.investment_list.list.length >= 6}}" bindtap="investment">更多</view>
+        <view class="outPadding">
+          <view class="more" wx:if="{{searchData.investment_list.list.length >= 6}}" bindtap="investment">更多</view>
+        </view>
       </view>
       <view class="outStyleBox" id="memberList" wx:if="{{industry_list.length != 0}}">
         <view class="blockTitle">投资领域</view>
@@ -29,10 +33,14 @@
         </block>
         <view class="more" wx:if="{{searchData.industry_list.length >= 6}}" bindtap="toIndustryList">更多</view>
       </view>
-      <view class="outStyleBox" id="memberList" wx:if="{{memberList.list.length != 0}}">
+      <view class="outStyleBox1" id="memberList" wx:if="{{memberList.list.length != 0}}">
+       <view class="outPadding">
         <view class="blockTitle">成员</view>
+        </view>
         <template is="memberList" data="{{memberList,currentTab,index}}"></template>
+        <view class="outPadding">
         <view class="more" wx:if="{{searchData.member_list.list.length >= 6}}" bindtap="toMember">更多</view>
+        </view>
       </view>
       <view class="hasNothing" wx:if="{{investment_list.length ==0 &&industry_list.length == 0 && memberList.list.length == 0}}">暂无数据</view>
     </scroll-view>
@@ -40,11 +48,15 @@
   <swiper-item data-current='1'>
     <scroll-view style="height:100%;" scroll-y="true" bindscrolltolower='loadMore' data-current='1'>
       <view style="height:32rpx;width:100%;"></view>
-      <view class="outStyleBox" id="investment" wx:if="{{investment_list.length != 0}}">
-        <view class="blockTitle">投资机构</view>
+      <view class="outStyleBox1" id="investment" wx:if="{{investment_list.length != 0}}">
+        <view class="outPadding">
+          <view class="blockTitle">投资机构</view>
+        </view>
         <template is="investment" data="{{investment_list}}"></template>
       </view>
-      <view class="hasNothing" wx:if="{{investment_list.length ==0}}">暂无数据</view>
+      <view class="outPadding">
+        <view class="hasNothing" wx:if="{{investment_list.length ==0}}">暂无数据</view>
+      </view>
     </scroll-view>
   </swiper-item>
   <swiper-item data-current='2'>
@@ -62,8 +74,10 @@
   <swiper-item data-current='3'>
     <scroll-view style="height:100%;" scroll-y="true" wx:if="{{memberList.length != 0}}" bindscrolltolower='loadMore' data-current='3'>
       <view style="height:32rpx;width:100%;"></view>
-      <view class="outStyleBox" id="memberList" wx:if="{{memberList.list.length != 0}}">
+      <view class="outStyleBox1" id="memberList" wx:if="{{memberList.list.length != 0}}">
+       <view class="outPadding">
         <view class="blockTitle">成员</view>
+        </view>
         <template is="memberList" data="{{memberList}}"></template>
       </view>
       <view class="hasNothing" wx:if="{{memberList.list.length == 0}}">暂无数据</view>
