--- a/Weitianshi/pages/organization/subPage/list_industry/list_industry.wxss
+++ b/Weitianshi/pages/organization/subPage/list_industry/list_industry.wxss
@@ -42,6 +42,7 @@
   margin-right: 40rpx;
   margin-bottom: 32rpx;
   white-space: nowrap;
+  color: #666;
 }
 
 .industryTitle:first-child {
@@ -55,9 +56,7 @@
 .industryContentBlock {
   font-size: 28rpx;
   color: #333;
-  line-height: 30rpx;
-  text-align: left;
-  margin-bottom: 64rpx;
+  line-height: 80rpx;
 }
 
 .industryContentBlock:last-child {
@@ -66,10 +65,12 @@
 
 .industryContentTitle {
   width: 304rpx;
+  margin-left: 36rpx;
 }
 
 .industryContent {
   width: 128rpx;
+  color: #666;
 }
 
 .industryContent:last-child {
@@ -90,14 +91,14 @@
 .down {
   font-size: 20rpx;
   color: #28dc41;
-  line-height: 30rpx;
+  line-height: 70rpx;
   text-align: left;
 }
 
 .up {
   font-size: 20rpx;
   color: #f44c4c;
-  line-height: 30rpx;
+  line-height: 70rpx;
   text-align: left;
 }
 
@@ -105,7 +106,7 @@
   width: 12rpx;
   height: 6rpx;
   padding-top: 12rpx;
-  margin: 0 4rpx 0 12rpx;
+  margin: 18rpx 4rpx 0 12rpx;
 }
 .industryNum{
 width: 80rpx;
