12-12-霍春阳-下班
修改剩余点击反馈,以及发现的bug

--- a/Weitianshi/app.wxss
+++ b/Weitianshi/app.wxss
@@ -1180,3 +1180,7 @@ textarea {
    /* background: #f2f3f4 !important; */
     background: inherit!important
 }
+.t-aLine {
+  border-top: 1rpx solid #e6e6e6;
+  margin: 0 32rpx;
+}
