--- a/Weitianshi/utils/wxml/projectDetail.wxml
+++ b/Weitianshi/utils/wxml/projectDetail.wxml
@@ -191,6 +191,7 @@
     <image src="/img/icon-shoucang@2x.png" class="collectPic"></image>
   </view>
   <view class="contactProject" hover-class='t-other-button-hover' catchtap="contactPerson">联系项目方</view>
+  <view class='t-line'></view>
   <view class="businessBook" catchtap="businessBook" hover-class='t-other-button-hover' wx:if="{{button_type == 1}}">商业计划书</view>
   <view class="businessBook1" wx:if="{{button_type == 0}}">申请中</view>
   <view class="businessBook project-applicationm" hover-class='t-other-button-hover' bindtap="applyProject" wx:if="{{button_type == 3}}" data-project="{{id}}">申请查看</view>
