--- a/Weitianshi/pages/message/viewProjectUser/viewProjectUser.wxss
+++ b/Weitianshi/pages/message/viewProjectUser/viewProjectUser.wxss
@@ -326,14 +326,12 @@ page {
   color: #999;
 }
 
-/* .t-cardBottom {
-  border-top: 2rpx solid #e6e6e6;
-  padding-top: 30rpx;
-  padding-bottom: 30rpx;
-  margin: 0;
-  font-size: 28rpx;
-  color: #40587a;
-  background: white;
-  margin-bottom:24rpx;
-} */
-
+.aline {
+  margin: 0 32rpx;
+  width: 90%;
+  height: 2rpx;
+  background: #e6e6e6;
+}
+.t-cardBottom {
+  border-top: none;
+}
