--- a/Weitianshi/pages/my/investCase/investCase.wxml
+++ b/Weitianshi/pages/my/investCase/investCase.wxml
@@ -2,7 +2,7 @@
 <scroll-view style="height:100%;" scroll-y="true">
   <!--已发布的项目-->
   <block wx:for="{{invest_case}}" wx:key="{{pro_id}}" wx:for-item="myProject">
-     <template is="projectList" data="{{myProject:myProject,index:index}}"></template>
+    <template is="projectList" data="{{myProject:myProject,index:index}}"></template>
   </block>
 
   <!--空状态-->
@@ -12,7 +12,5 @@
 </scroll-view>
 
 <view style="height:98rpx;"></view>
-<!-- 按钮一号 -->   
- <template is="buttonOne" data="{{text:'添加案例',btnName:'buttonOne',disabled}}"></template>
-
-
+<!-- 按钮一号 -->
+<template is="buttonOne" data="{{text:buttonOneText,btnName:'buttonOne',disabled}}"></template>
