--- a/Weitianshi/pages/myProject/publishProject/publishProject.wxml
+++ b/Weitianshi/pages/myProject/publishProject/publishProject.wxml
@@ -75,7 +75,7 @@
   </view>
   <view class="userBox"  hover-class='t-hoverColor'>
     <view class="projectBoxContent flex">
-      <view class="projectTitle">投后股份（%）</view>
+      <view class="projectTitle">投后股份(%)*</view>
       <view class="flex">
         <input class="projectContentInput newBox" placeholder="请输入投后股权占比" placeholder-style="color:#ccc" bindinput="projectFinance" value='{{pro_finance_stock_after}}' />
         <image src="/img/icon-jiantou3@2x.png" class="arrowStyle"></image>
