--- a/Weitianshi/pages/discoverInvest/discoverInvest.wxml
+++ b/Weitianshi/pages/discoverInvest/discoverInvest.wxml
@@ -93,6 +93,7 @@
         <view class='investorCard'>
           <view class="t-investorColor" hover-class='t-hoverColor'>
             <template is='InvestorCard' data='{{item}}'></template>
+            <view class="t-alineHeight"></view>
             <template is='cardBottom1' data='{{item,user_id}}'></template>
           </view>
         </view>
@@ -111,6 +112,7 @@
         <view class='investorCard'>
           <view class="t-investorColor" hover-class='t-hoverColor'>
             <template is='InvestorCard' data='{{item}}'></template>
+                 <view class="t-alineHeight"></view>
             <template is='cardBottom1' data='{{item,user_id}}'></template>
           </view>
         </view>
@@ -125,7 +127,6 @@
   <!--我的  -->
   <swiper-item data-current='3'>
     <template is='myContacts' data='{{myList,activtyBanner}}'></template>
-
     <!--空状态-->
     <view wx:if="{{empty == 1}}">
       <view class="nullState" wx:if="{{contacts=='' || !contacts}}">
@@ -158,10 +159,9 @@
   <!-- <view bindtap="goTo">
     <image src="{{activtyBanner}}" class="contactsPic"></image>
   </view> -->
-  <scroll-view scroll-y="true" bindscrolltolower="loadMore" style='height:90%'>
+  <scroll-view scroll-y="true" bindscrolltolower="loadMore" style='height:98%'>
     <view class="aBox"></view>
     <view class='investorCard'>
-
       <block wx:for="{{myList}}" wx:key="{{item.user_id}}">
         <view class="t-investorColor" hover-class='t-hoverColor'>
           <view class="t-outsideBox" data-id="{{item.user_id}}" catchtap="userDetail">
@@ -197,6 +197,7 @@
                 </view>
               </view>
             </view>
+            <view class='t-alineHeight'></view>
             <view class='cardBottom flex' wx:if='{{item.user_id!=user_id}}'>
               <view class='t-cardBottomItem flex' hover-class='t-hoverColor' hover-stop-propagation='true' data-id='{{item.user_id}}' catchtap='projectPush'>
                 <image class='t-itemPic' src='/img/icon-tuisongxiangmu@2x.png'></image>
