--- a/Weitianshi/pages/my/investCaseEdit/investCaseEdit.wxml
+++ b/Weitianshi/pages/my/investCaseEdit/investCaseEdit.wxml
@@ -30,7 +30,8 @@
   </view>
 </view>
 <view style="height:118rpx;"></view>
-<template is="buttonOne" data="{{text:'保存',btnName:'buttonOne',disabled}}"></template>
+
+<template is="buttonOne" data="{{text:buttonOneText,btnName:'buttonOne',disabled}}"></template>
 
 <!--错语提示-->
 <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
